# nodec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_jp.md  overflow_xsputn_timing_analysis.md  test_ostringstream.cpp  view_performance_analysis.md
modules/imguizmo/: CMakeLists.txt  README.md
modules/nodec_animation/: CMakeLists.txt  README.md
modules/nodec_animation/docs/: note.drawio
modules/nodec_animation/include/nodec_animation/: animated_component_writer.hpp  animation_curve.hpp  keyframe.hpp  wrap_mode.hpp
modules/nodec_animation/tests/: CMakeLists.txt  animation_clip.cpp  animation_curve.cpp  animator_system.cpp
modules/nodec_animations/tests/: CMakeLists.txt  animation_clip.cpp  animation_curve.cpp  animator_system.cpp
modules/nodec_rendering/: CMakeLists.txt  README.md
modules/nodec_rendering/doc/: note.drawio
modules/nodec_rendering/docs/: note.drawio
modules/nodec_rendering/include/nodec_rendering/: cull_mode.hpp  nodec_rendering.hpp  rendering.hpp  sampler.hpp
modules/nodec_rendering/resources/: README.md
modules/nodec_rendering/tests/: CMakeLists.txt  visivility_system.cpp
modules/nodec_scene/: CMakeLists.txt  README.md
modules/nodec_scene/docs/: note.drawio
modules/nodec_scene/include/nodec_scene/: scene.hpp  scene_entity.hpp  scene_registry.hpp
modules/nodec_scene/tests/: CMakeLists.txt  scene.cpp  transform_system.cpp
modules/nodec_scene/unit_tests/test_basic/: main.cpp
modules/nodec_scene_serialization/: CMakeLists.txt  README.md
modules/nodec_scene_serialization/docs/: note.drawio
modules/nodec_scene_serialization/include/nodec_scene_serialization/: archive_context.hpp  entity_builder.hpp  entity_emplacer.hpp  entity_loader.hpp  entity_serialization.hpp  entity_serializer.hpp  scene_entity_emplacer.hpp  scene_loader.hpp  scene_serialization.hpp  serializable_component.hpp  serializable_entity.hpp  serializable_entity_node.hpp  serializable_scene_graph.hpp
modules/nodec_scene_serialization/tests/: CMakeLists.txt  entity_builder.cpp  entity_emplacer.cpp  entity_loader.cpp  entity_serialization.cpp  entity_serializer.cpp  prefab_load_system.cpp  scene_serialization.cpp
modules/nodec_serialization/: CMakeLists.txt  README.md
modules/nodec_serialization/docs/: note.drawio
modules/nodec_serialization/tests/poly/: main.cpp  myclasses.cpp
modules/nodec_serialization/tests/poly_component/: test_comp.hpp
modules/nodec_serialization/unit_tests/poly/: myclasses.hpp
modules/nodec_serialization/unit_tests/poly_component/: main.cpp  test_comp.hpp
modules/nodec_serialization/unit_tests/test_basic/: test_basic.cpp
nodec/: CMakeLists.txt  README.md
nodec/_legacy/include/nodec/: error_formatter.hpp  event.hpp  nodec_object.hpp  object.hpp
nodec/_legacy/src/nodec/: nodec_exception.cpp  nodec_object.cpp
nodec/docs/: signals.drawio
nodec/include/nodec/: algorithm.hpp  application.hpp  endian.hpp  error_formatter.hpp  event.hpp  exception.hpp  flags.hpp  fold.hpp  formatter.hpp  gmath.hpp  logging.hpp  macros.hpp  matrix4x4.hpp  memory.hpp  module_interface.hpp  nodec_exception.hpp  nodec_exception_.hpp  nodec_object.hpp  object.hpp  quaternion.hpp  random.hpp  ranges.hpp  riff.hpp  signals.hpp  stopwatch.hpp  type_info.hpp  type_traits.hpp  unicode.hpp  utility.hpp  vector2.hpp  vector3.hpp  vector4.hpp
nodec/include/nodec/audio/: basic_sound_buffer.hpp  basic_sound_ibuffer.hpp  basic_sound_obuffer.hpp  sound_istream.hpp  sound_stream.hpp  wav_file_sound_ibuffer.hpp  wav_format.hpp  wave_format.hpp
nodec/include/nodec/concurrent/: thread_pool_executor.hpp
nodec/include/nodec/containers/: sparse_table.hpp
nodec/include/nodec/ecs/: entity.hpp  registry.hpp  sparse_table.hpp  storage.hpp  type_info.hpp  view.hpp
nodec/include/nodec/entities/: entity.hpp  exceptions.hpp  registry.hpp  sparse_table.hpp  storage.hpp  type_info.hpp  view.hpp
nodec/include/nodec/entity/: entity.hpp  registry.hpp  sparse_set.hpp  sparse_table.hpp  storage.hpp  type_info.hpp
nodec/include/nodec/flags/: allow_flags.hpp  flags.hpp  iterator.hpp
nodec/src/nodec/: application.cpp  gmath.cpp  input.cpp  logging.cpp  nodec_exception.cpp  nodec_object.cpp  unicode.cpp
nodec/tests/: CMakeLists.txt
nodec/tests/entities/: registry.cpp  storage.cpp
nodec/tests/formatter/: formatter.cpp
nodec/tests/math/: gfx.cpp  math.cpp
nodec/tests/matrix4x4/: matrix4x4.cpp
nodec/tests/quaternion/: quaternion.cpp
nodec/tests/random/: random.cpp
nodec/tests/ranges/: ranges.cpp
nodec/tests/resource_management/: resource_regsitry.cpp
nodec/tests/stopwatch/: stopwatch.cpp
nodec/tests/type_info/: type_info.cpp
nodec/tests/utility/: utility.cpp
nodec/tests/vector/: vector.cpp
nodec/unit_tests/entities/: registry.cpp
nodec/unit_tests/optional/: main.cpp
tests/: CMakeLists.txt
tests/array_view/: array_view.cpp
tests/asyncio/: event_loop.cpp  event_promise.cpp
tests/containers/: sparse_table.cpp
tests/endian/test_basic/: main.cpp
tests/event_loop/: event_loop.cpp
tests/flags/: flags.cpp
tests/formatter/: complex_format_debug.cpp  constructor_debug.cpp  debug_test.cpp  eof_necessity_test.cpp  formatter.cpp  formatter_benchmark.cpp  formatter_detailed_benchmark.cpp  formatter_ostringstream_compat.cpp  formatter_vector3_benchmark.cpp  hex_debug.cpp  openmode_examples.cpp  optimized_ostringstream_test.cpp  ostringstream_verification.cpp  overflow_xsputn_timing.cpp  smart_formatter_analysis.cpp  traits_eof_analysis.cpp  vector3_debug.cpp  view_analysis.cpp
tests/gfx/: gfx.cpp
tests/logging/: bench.cpp  bench_test.cpp  logger_test.cpp  logging.cpp  simple_formatter_test.cpp
tests/math/: gfx.cpp  math.cpp
tests/observers/: observers.cpp
tests/optional/: basic.cpp
tests/random/: random.cpp
tests/ranges/: ranges.cpp
tests/resource_management/: resource_registry.cpp
tests/signals/: signal.cpp
tests/string_builder/: basic_test.cpp  benchmark_test.cpp  oss_compat_test.cpp
tests/unicode/: unicode.cpp
tests/unicode/test_basic/: hello_world.utf8
tests/vector/: vector.cpp
(+696 files in other folders)
