project(nodec_tests)

function(add_basic_test TARGET TEST_SOURCES)
    add_executable(${TARGET} ${TEST_SOURCES})
    target_link_libraries(${TARGET} nodec)
    target_include_directories(${TARGET} PRIVATE common)

    add_test(NAME ${TARGET} COMMAND ${TARGET})
endfunction(add_basic_test)

add_basic_test("optional__basic" optional/basic.cpp)
add_basic_test("entitites__registry" entities/registry.cpp)
add_basic_test("entitites__storage" entities/storage.cpp)
add_basic_test("math" math/math.cpp)
add_basic_test("math_gfx" math/gfx.cpp)
add_basic_test("type_info" type_info/type_info.cpp)
add_basic_test("formatter" formatter/formatter.cpp)
add_basic_test("utility" utility/utility.cpp)
add_basic_test("matrix4x4" matrix4x4/matrix4x4.cpp)
add_basic_test("signals__signal" signals/signal.cpp)
add_basic_test("containers__sparse_table" containers/sparse_table.cpp)
add_basic_test("random" random/random.cpp)
add_basic_test("resource_management__resource_registry" resource_management/resource_regsitry.cpp)
add_basic_test("vector" vector/vector.cpp)
add_basic_test("quaternion" quaternion/quaternion.cpp)
add_basic_test("ranges" ranges/ranges.cpp)
add_basic_test("stopwatch" stopwatch/stopwatch.cpp)
